--- a/chrome-devtool/package.json
+++ b/chrome-devtool/package.json
@@ -13,7 +13,8 @@
     "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-behavior-graph": "^1.0.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@ungap/structured-clone": "^1.0.2"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
