--- a/chrome-devtool/package.json
+++ b/chrome-devtool/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-behavior-graph": "^1.0.0",
     "react-dom": "^18.2.0",
-    "@ungap/structured-clone": "^1.0.2"
+    "@ungap/structured-clone": "^1.0.2",
+    "@blueprintjs/core": "^4.18.0",
+    "@blueprintjs/table": "^4.10.1"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
